@@ -1,59 +1,53 @@
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import javax.annotation.Nullable;
+import com.mojang.brigadier.StringReader;
+import com.mojang.brigadier.arguments.ArgumentType;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import java.util.Arrays;
+import java.util.Collection;
 
-public record dy(List<dy.a> b) {
-   public static final dy a = new dy(List.of());
-   private static final int c = 8;
-   private static final int d = 16;
+public class dy implements ArgumentType<dy.a> {
+   private static final Collection<String> c = Arrays.asList("0", "~", "~-5");
+   public static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(vd.c("argument.angle.incomplete"));
+   public static final SimpleCommandExceptionType b = new SimpleCommandExceptionType(vd.c("argument.angle.invalid"));
 
-   public dy(ue $$0) {
-      this($$0.a(ue.a(ArrayList::new, 8), dy.a::new));
+   public static dy a() {
+      return new dy();
    }
 
-   @Nullable
-   public vn a(String $$0) {
-      for (dy.a $$1 : this.b) {
-         if ($$1.a.equals($$0)) {
-            return $$1.b;
+   public static float a(CommandContext<ds> $$0, String $$1) {
+      return ((dy.a)$$0.getArgument($$1, dy.a.class)).a((ds)$$0.getSource());
+   }
+
+   public dy.a a(StringReader $$0) throws CommandSyntaxException {
+      if (!$$0.canRead()) {
+         throw a.createWithContext($$0);
+      } else {
+         boolean $$1 = fu.b($$0);
+         float $$2 = $$0.canRead() && $$0.peek() != ' ' ? $$0.readFloat() : 0.0F;
+         if (!Float.isNaN($$2) && !Float.isInfinite($$2)) {
+            return new dy.a($$2, $$1);
+         } else {
+            throw b.createWithContext($$0);
          }
       }
-
-      return null;
    }
 
-   public void a(ue $$0) {
-      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
+   public Collection<String> getExamples() {
+      return c;
    }
 
-   public static dy a(vt<?> $$0, dy.b $$1) {
-      List<dy.a> $$2 = $$0.a().stream().map($$1x -> {
-         vn $$2x = $$1.sign($$1x.c());
-         return $$2x != null ? new dy.a($$1x.a(), $$2x) : null;
-      }).filter(Objects::nonNull).toList();
-      return new dy($$2);
-   }
+   public static final class a {
+      private final float a;
+      private final boolean b;
 
-   public List<dy.a> a() {
-      return this.b;
-   }
-
-   public static record a(String a, vn b) {
-
-      public a(ue $$0) {
-         this($$0.d(16), vn.a($$0));
+      a(float $$0, boolean $$1) {
+         this.a = $$0;
+         this.b = $$1;
       }
 
-      public void a(ue $$0) {
-         $$0.a(this.a, 16);
-         vn.a($$0, this.b);
+      public float a(ds $$0) {
+         return aui.g(this.b ? this.a + $$0.k().j : this.a);
       }
-   }
-
-   @FunctionalInterface
-   public interface b {
-      @Nullable
-      vn sign(String var1);
    }
 }
