@@ -1,68 +1,83 @@
-import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import com.mojang.logging.LogUtils;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Sets;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
-import java.util.function.UnaryOperator;
-import javax.annotation.Nullable;
-import org.slf4j.Logger;
 
-public class eif extends ehq {
-   private static final Logger b = LogUtils.getLogger();
-   public static final Codec<eif> a = RecordCodecBuilder.create(
-      $$0 -> a($$0).and($$0.group(atg.a(vd.a, "name").forGetter($$0x -> $$0x.c), atg.a(ege.b.e, "entity").forGetter($$0x -> $$0x.d))).apply($$0, eif::new)
+public class eif extends eib {
+   public static final int a = 0;
+   public static final Codec<eif> b = RecordCodecBuilder.create(
+      $$0 -> a($$0)
+            .and($$0.group(ekk.a.fieldOf("count").forGetter($$0x -> $$0x.c), atq.a(Codec.INT, "limit", Integer.valueOf(0)).forGetter($$0x -> $$0x.d)))
+            .apply($$0, eif::new)
    );
-   private final Optional<vb> c;
-   private final Optional<ege.b> d;
+   private final ekj c;
+   private final int d;
 
-   private eif(List<ejd> $$0, Optional<vb> $$1, Optional<ege.b> $$2) {
+   eif(List<ejo> $$0, ekj $$1, int $$2) {
       super($$0);
       this.c = $$1;
       this.d = $$2;
    }
 
    @Override
-   public ehs b() {
-      return eht.l;
+   public eid b() {
+      return eie.i;
    }
 
    @Override
-   public Set<eim<?>> a() {
-      return this.d.<Set<eim<?>>>map($$0 -> Set.of($$0.a())).orElse(Set.of());
+   public Set<eix<?>> a() {
+      return Sets.union(ImmutableSet.of(eja.d), this.c.a());
    }
 
-   public static UnaryOperator<vb> a(ege $$0, @Nullable ege.b $$1) {
-      if ($$1 != null) {
-         blf $$2 = $$0.c($$1.a());
-         if ($$2 != null) {
-            ds $$3 = $$2.dd().a(2);
-            return $$2x -> {
-               try {
-                  return ve.a($$3, $$2x, $$2, 0);
-               } catch (CommandSyntaxException var4) {
-                  b.warn("Failed to resolve text component", var4);
-                  return $$2x;
-               }
-            };
+   private boolean c() {
+      return this.d > 0;
+   }
+
+   @Override
+   public cmr a(cmr $$0, egp $$1) {
+      blp $$2 = $$1.c(eja.d);
+      if ($$2 instanceof bmf) {
+         int $$3 = cre.h((bmf)$$2);
+         if ($$3 == 0) {
+            return $$0;
+         }
+
+         float $$4 = (float)$$3 * this.c.b($$1);
+         $$0.g(Math.round($$4));
+         if (this.c() && $$0.L() > this.d) {
+            $$0.f(this.d);
          }
       }
 
-      return $$0x -> $$0x;
-   }
-
-   @Override
-   public cmh a(cmh $$0, ege $$1) {
-      this.c.ifPresent($$2 -> $$0.a(a($$1, this.d.orElse(null)).apply($$2)));
       return $$0;
    }
 
-   public static ehq.a<?> a(vb $$0) {
-      return a($$1 -> new eif($$1, Optional.of($$0), Optional.empty()));
+   public static eif.a a(ekj $$0) {
+      return new eif.a($$0);
    }
 
-   public static ehq.a<?> a(vb $$0, ege.b $$1) {
-      return a($$2 -> new eif($$2, Optional.of($$0), Optional.of($$1)));
+   public static class a extends eib.a<eif.a> {
+      private final ekj a;
+      private int b = 0;
+
+      public a(ekj $$0) {
+         this.a = $$0;
+      }
+
+      protected eif.a a() {
+         return this;
+      }
+
+      public eif.a a(int $$0) {
+         this.b = $$0;
+         return this;
+      }
+
+      @Override
+      public eic b() {
+         return new eif(this.g(), this.a, this.b);
+      }
    }
 }
