@@ -1,107 +1,248 @@
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
 public class pm {
-   public static dyo.c a(ij<ctx> $$0, Map<bly, dyv> $$1, dnu.b $$2, dyz $$3) {
-      return new dyo.c($$0, $$1, $$2, $$3);
-   }
+   public static final ahc<eai> a = pj.a("village/snowy/town_centers");
+   private static final ahc<eai> b = pj.a("village/snowy/terminators");
 
-   private static dyo.c a(ij<ctx> $$0, dnu.b $$1, dyz $$2) {
-      return a($$0, Map.of(), $$1, $$2);
-   }
-
-   private static dyo.c a(ij<ctx> $$0, dyz $$1) {
-      return a($$0, Map.of(), dnu.b.e, $$1);
-   }
-
-   public static void a(pa<dyo> $$0) {
-      ig<ctx> $$1 = $$0.a(kc.as);
-      ig<dzx> $$2 = $$0.a(kc.aF);
+   public static void a(pc<eai> $$0) {
+      ii<dyd> $$1 = $$0.a(ke.aC);
+      ih<dyd> $$2 = $$1.b(qz.h);
+      ih<dyd> $$3 = $$1.b(qz.c);
+      ih<dyd> $$4 = $$1.b(qz.d);
+      ii<ecx> $$5 = $$0.a(ke.aE);
+      ih<ecx> $$6 = $$5.b(pk.k);
+      ih<ecx> $$7 = $$5.b(pk.n);
+      ih<ecx> $$8 = $$5.b(pk.c);
+      ii<eai> $$9 = $$0.a(ke.aG);
+      ih<eai> $$10 = $$9.b(pj.a);
+      ih<eai> $$11 = $$9.b(b);
       $$0.a(
-         dyi.a,
-         new eao(
-            a($$1.b(arq.y), Map.of(bly.a, new dyv(dyv.a.b, bhz.a(new cuj.c(blj.az, 1, 1, 1)))), dnu.b.e, dyz.c), $$2.b(pf.a), 7, dwu.a(dos.a(0)), true, dny.a.a
+         a,
+         new eai(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eag.a("village/snowy/town_centers/snowy_meeting_point_1"), 100),
+               Pair.of(eag.a("village/snowy/town_centers/snowy_meeting_point_2"), 50),
+               Pair.of(eag.a("village/snowy/town_centers/snowy_meeting_point_3"), 150),
+               Pair.of(eag.a("village/snowy/zombie/town_centers/snowy_meeting_point_1"), 2),
+               Pair.of(eag.a("village/snowy/zombie/town_centers/snowy_meeting_point_2"), 1),
+               Pair.of(eag.a("village/snowy/zombie/town_centers/snowy_meeting_point_3"), 3)
+            ),
+            eai.a.b
          )
       );
-      $$0.a(dyi.b, new eas(a($$1.b(arq.t), dnu.b.d, dyz.a), eas.a.a));
-      $$0.a(dyi.c, new eas(a($$1.b(arq.u), dnu.b.d, dyz.a), eas.a.b));
-      $$0.a(dyi.d, new ebk(a($$1.b(arq.Q), dyz.a)));
-      $$0.a(dyi.e, new eaq(a($$1.b(arq.s), dyz.a)));
-      $$0.a(dyi.f, new eaj(a($$1.b(arq.q), dyz.a)));
-      $$0.a(dyi.g, new ean(a($$1.b(arq.r), dyz.a)));
-      $$0.a(dyi.h, new ebe(a($$1.b(arq.G), dyz.a), false));
-      $$0.a(dyi.i, new ebe(a($$1.b(arq.F), dyz.a), true));
-      $$0.a(
-         dyi.j,
-         new ebi(
-            a(
-               $$1.b(arq.J),
-               Map.of(bly.a, new dyv(dyv.a.a, bhz.a(new cuj.c(blj.bl, 1, 1, 1))), bly.b, new dyv(dyv.a.a, bhz.a(new cuj.c(blj.n, 1, 1, 1)))),
-               dnu.b.e,
-               dyz.a
-            )
+      pj.a(
+         $$0,
+         "village/snowy/streets",
+         new eai(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eag.a("village/snowy/streets/corner_01", $$6), 2),
+               Pair.of(eag.a("village/snowy/streets/corner_02", $$6), 2),
+               Pair.of(eag.a("village/snowy/streets/corner_03", $$6), 2),
+               Pair.of(eag.a("village/snowy/streets/square_01", $$6), 2),
+               Pair.of(eag.a("village/snowy/streets/straight_01", $$6), 4),
+               Pair.of(eag.a("village/snowy/streets/straight_02", $$6), 4),
+               Pair.of(eag.a("village/snowy/streets/straight_03", $$6), 4),
+               Pair.of(eag.a("village/snowy/streets/straight_04", $$6), 7),
+               Pair.of(eag.a("village/snowy/streets/straight_06", $$6), 4),
+               Pair.of(eag.a("village/snowy/streets/straight_08", $$6), 4),
+               Pair.of(eag.a("village/snowy/streets/crossroad_02", $$6), 1),
+               Pair.of(eag.a("village/snowy/streets/crossroad_03", $$6), 2),
+               new Pair[]{
+                  Pair.of(eag.a("village/snowy/streets/crossroad_04", $$6), 2),
+                  Pair.of(eag.a("village/snowy/streets/crossroad_05", $$6), 2),
+                  Pair.of(eag.a("village/snowy/streets/crossroad_06", $$6), 2),
+                  Pair.of(eag.a("village/snowy/streets/turn_01", $$6), 3)
+               }
+            ),
+            eai.a.a
          )
       );
-      $$0.a(dyi.k, new ebg(a($$1.b(arq.H), dyz.b)));
-      $$0.a(
-         dyi.l,
-         new eay(
-            a(
-               $$1.b(arq.v),
-               Map.of(bly.a, new dyv(dyv.a.b, bhz.a(new cuj.c(blj.W, 1, 2, 4))), bly.e, new dyv(dyv.a.b, cuj.a), bly.d, new dyv(dyv.a.b, cuj.a)),
-               dnu.b.e,
-               dyz.a
-            )
+      pj.a(
+         $$0,
+         "village/snowy/zombie/streets",
+         new eai(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eag.a("village/snowy/zombie/streets/corner_01", $$6), 2),
+               Pair.of(eag.a("village/snowy/zombie/streets/corner_02", $$6), 2),
+               Pair.of(eag.a("village/snowy/zombie/streets/corner_03", $$6), 2),
+               Pair.of(eag.a("village/snowy/zombie/streets/square_01", $$6), 2),
+               Pair.of(eag.a("village/snowy/zombie/streets/straight_01", $$6), 4),
+               Pair.of(eag.a("village/snowy/zombie/streets/straight_02", $$6), 4),
+               Pair.of(eag.a("village/snowy/zombie/streets/straight_03", $$6), 4),
+               Pair.of(eag.a("village/snowy/zombie/streets/straight_04", $$6), 7),
+               Pair.of(eag.a("village/snowy/zombie/streets/straight_06", $$6), 4),
+               Pair.of(eag.a("village/snowy/zombie/streets/straight_08", $$6), 4),
+               Pair.of(eag.a("village/snowy/zombie/streets/crossroad_02", $$6), 1),
+               Pair.of(eag.a("village/snowy/zombie/streets/crossroad_03", $$6), 2),
+               new Pair[]{
+                  Pair.of(eag.a("village/snowy/zombie/streets/crossroad_04", $$6), 2),
+                  Pair.of(eag.a("village/snowy/zombie/streets/crossroad_05", $$6), 2),
+                  Pair.of(eag.a("village/snowy/zombie/streets/crossroad_06", $$6), 2),
+                  Pair.of(eag.a("village/snowy/zombie/streets/turn_01", $$6), 3)
+               }
+            ),
+            eai.a.a
          )
       );
-      $$0.a(dyi.m, new eba(a($$1.b(arq.w), dyz.a), eba.a.b, 0.3F, 0.9F));
-      $$0.a(dyi.n, new eba(a($$1.b(arq.x), dyz.a), eba.a.a, 0.3F, 0.9F));
-      $$0.a(dyi.o, new eau(a($$1.b(arq.R), Map.of(bly.a, new dyv(dyv.a.a, eau.d)), dnu.b.h, dyz.a)));
-      $$0.a(dyi.p, new eaw(a($$1.b(arq.S), dnu.b.h, dyz.c), dwy.a(dos.a(32), dos.c(2))));
-      $$0.a(dyi.q, new eal(a($$1.b(arq.W), dyz.a)));
-      $$0.a(dyi.r, new eah(a($$1.b(arq.p), dnu.b.d, dyz.a)));
-      $$0.a(dyi.s, new eao(a($$1.b(arq.T), dyz.a), $$2.b(ow.a), 6, dwu.a(dos.a(33)), false));
-      $$0.a(dyi.t, new eao(a($$1.b(arq.L), dyz.c), $$2.b(pg.a), 6, dwu.a(dos.a(0)), true, dny.a.a));
-      $$0.a(dyi.u, new eao(a($$1.b(arq.K), dyz.c), $$2.b(pc.a), 6, dwu.a(dos.a(0)), true, dny.a.a));
-      $$0.a(dyi.v, new eao(a($$1.b(arq.M), dyz.c), $$2.b(pj.a), 6, dwu.a(dos.a(0)), true, dny.a.a));
-      $$0.a(dyi.w, new eao(a($$1.b(arq.N), dyz.c), $$2.b(pk.a), 6, dwu.a(dos.a(0)), true, dny.a.a));
-      $$0.a(dyi.x, new eao(a($$1.b(arq.O), dyz.c), $$2.b(po.a), 6, dwu.a(dos.a(0)), true, dny.a.a));
-      $$0.a(
-         dyi.y,
-         new ebc(
-            a($$1.b(arq.E), dyz.a),
-            List.of(new ebc.a(ebb.b.e, 1.0F, 0.2F, false, false, true, false, 0.5F), new ebc.a(ebb.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
+      pj.a(
+         $$0,
+         "village/snowy/houses",
+         new eai(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eag.a("village/snowy/houses/snowy_small_house_1"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_small_house_2"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_small_house_3"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_small_house_4"), 3),
+               Pair.of(eag.a("village/snowy/houses/snowy_small_house_5"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_small_house_6"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_small_house_7"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_small_house_8"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_medium_house_1"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_medium_house_2"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_medium_house_3"), 2),
+               Pair.of(eag.a("village/snowy/houses/snowy_butchers_shop_1"), 2),
+               new Pair[]{
+                  Pair.of(eag.a("village/snowy/houses/snowy_butchers_shop_2"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_tool_smith_1"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_fletcher_house_1"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_shepherds_house_1"), 3),
+                  Pair.of(eag.a("village/snowy/houses/snowy_armorer_house_1"), 1),
+                  Pair.of(eag.a("village/snowy/houses/snowy_armorer_house_2"), 1),
+                  Pair.of(eag.a("village/snowy/houses/snowy_fisher_cottage"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_tannery_1"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_cartographer_house_1"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_library_1"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_masons_house_1"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_masons_house_2"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_weapon_smith_1"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_temple_1"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_farm_1", $$7), 3),
+                  Pair.of(eag.a("village/snowy/houses/snowy_farm_2", $$7), 3),
+                  Pair.of(eag.a("village/snowy/houses/snowy_animal_pen_1"), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_animal_pen_2"), 2),
+                  Pair.of(eag.g(), 6)
+               }
+            ),
+            eai.a.b
          )
       );
-      $$0.a(dyi.z, new ebc(a($$1.b(arq.z), dyz.a), new ebc.a(ebb.b.b, 0.0F, 0.0F, false, false, false, false, 1.0F)));
-      $$0.a(dyi.A, new ebc(a($$1.b(arq.A), dyz.a), new ebc.a(ebb.b.a, 0.5F, 0.8F, true, true, false, false, 1.0F)));
-      $$0.a(dyi.B, new ebc(a($$1.b(arq.C), dyz.a), new ebc.a(ebb.b.c, 0.0F, 0.5F, false, true, false, false, 1.0F)));
-      $$0.a(
-         dyi.C,
-         new ebc(
-            a($$1.b(arq.D), dyz.a),
-            List.of(new ebc.a(ebb.b.d, 1.0F, 0.2F, false, false, true, false, 0.5F), new ebc.a(ebb.b.a, 0.5F, 0.2F, false, false, true, false, 0.5F))
+      pj.a(
+         $$0,
+         "village/snowy/zombie/houses",
+         new eai(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_small_house_1", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_small_house_2", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_small_house_3", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_small_house_4", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_small_house_5", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_small_house_6", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_small_house_7", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_small_house_8", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_medium_house_1", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_medium_house_2", $$8), 2),
+               Pair.of(eag.a("village/snowy/zombie/houses/snowy_medium_house_3", $$8), 1),
+               Pair.of(eag.a("village/snowy/houses/snowy_butchers_shop_1", $$8), 2),
+               new Pair[]{
+                  Pair.of(eag.a("village/snowy/houses/snowy_butchers_shop_2", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_tool_smith_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_fletcher_house_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_shepherds_house_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_armorer_house_1", $$8), 1),
+                  Pair.of(eag.a("village/snowy/houses/snowy_armorer_house_2", $$8), 1),
+                  Pair.of(eag.a("village/snowy/houses/snowy_fisher_cottage", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_tannery_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_cartographer_house_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_library_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_masons_house_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_masons_house_2", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_weapon_smith_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_temple_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_farm_1", $$8), 3),
+                  Pair.of(eag.a("village/snowy/houses/snowy_farm_2", $$8), 3),
+                  Pair.of(eag.a("village/snowy/houses/snowy_animal_pen_1", $$8), 2),
+                  Pair.of(eag.a("village/snowy/houses/snowy_animal_pen_2", $$8), 2),
+                  Pair.of(eag.g(), 6)
+               }
+            ),
+            eai.a.b
          )
       );
-      $$0.a(dyi.D, new ebc(a($$1.b(arq.B), dyz.a), new ebc.a(ebb.b.c, 0.0F, 0.8F, false, false, true, false, 1.0F)));
-      $$0.a(dyi.E, new ebc(a($$1.b(arq.V), dyz.a), new ebc.a(ebb.b.f, 0.5F, 0.0F, false, false, false, true, 1.0F)));
       $$0.a(
-         dyi.F,
-         new eao(
-            a($$1.b(arq.U), Arrays.stream(bly.values()).collect(Collectors.toMap($$0x -> $$0x, $$0x -> new dyv(dyv.a.b, bhz.c()))), dnu.b.h, dyz.d),
-            $$2.b(or.a),
-            Optional.of(new agt("city_anchor")),
-            7,
-            dwu.a(dos.a(-27)),
-            false,
-            Optional.empty(),
-            116,
-            List.of()
+         b,
+         new eai(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eag.a("village/plains/terminators/terminator_01", $$6), 1),
+               Pair.of(eag.a("village/plains/terminators/terminator_02", $$6), 1),
+               Pair.of(eag.a("village/plains/terminators/terminator_03", $$6), 1),
+               Pair.of(eag.a("village/plains/terminators/terminator_04", $$6), 1)
+            ),
+            eai.a.a
          )
       );
-      $$0.a(dyi.G, new eao(a($$1.b(arq.P), Map.of(), dnu.b.d, dyz.b), $$2.b(pq.a), 7, dwu.a(dos.a(-15)), false, dny.a.a));
+      pj.a($$0, "village/snowy/trees", new eai($$10, ImmutableList.of(Pair.of(eag.a($$2), 1)), eai.a.b));
+      pj.a(
+         $$0,
+         "village/snowy/decor",
+         new eai(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eag.a("village/snowy/snowy_lamp_post_01"), 4),
+               Pair.of(eag.a("village/snowy/snowy_lamp_post_02"), 4),
+               Pair.of(eag.a("village/snowy/snowy_lamp_post_03"), 1),
+               Pair.of(eag.a($$2), 4),
+               Pair.of(eag.a($$3), 4),
+               Pair.of(eag.a($$4), 1),
+               Pair.of(eag.g(), 9)
+            ),
+            eai.a.b
+         )
+      );
+      pj.a(
+         $$0,
+         "village/snowy/zombie/decor",
+         new eai(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eag.a("village/snowy/snowy_lamp_post_01", $$8), 1),
+               Pair.of(eag.a("village/snowy/snowy_lamp_post_02", $$8), 1),
+               Pair.of(eag.a("village/snowy/snowy_lamp_post_03", $$8), 1),
+               Pair.of(eag.a($$2), 4),
+               Pair.of(eag.a($$3), 4),
+               Pair.of(eag.a($$4), 4),
+               Pair.of(eag.g(), 7)
+            ),
+            eai.a.b
+         )
+      );
+      pj.a(
+         $$0,
+         "village/snowy/villagers",
+         new eai(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eag.a("village/snowy/villagers/nitwit"), 1),
+               Pair.of(eag.a("village/snowy/villagers/baby"), 1),
+               Pair.of(eag.a("village/snowy/villagers/unemployed"), 10)
+            ),
+            eai.a.b
+         )
+      );
+      pj.a(
+         $$0,
+         "village/snowy/zombie/villagers",
+         new eai(
+            $$10,
+            ImmutableList.of(Pair.of(eag.a("village/snowy/zombie/villagers/nitwit"), 1), Pair.of(eag.a("village/snowy/zombie/villagers/unemployed"), 10)),
+            eai.a.b
+         )
+      );
    }
 }
