@@ -1,55 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class qg {
-   public static final ags<dqp<?, ?>> a = qf.a("ice_spike");
-   public static final ags<dqp<?, ?>> b = qf.a("ice_patch");
-   public static final ags<dqp<?, ?>> c = qf.a("forest_rock");
-   public static final ags<dqp<?, ?>> d = qf.a("iceberg_packed");
-   public static final ags<dqp<?, ?>> e = qf.a("iceberg_blue");
-   public static final ags<dqp<?, ?>> f = qf.a("blue_ice");
-   public static final ags<dqp<?, ?>> g = qf.a("lake_lava");
-   public static final ags<dqp<?, ?>> h = qf.a("disk_clay");
-   public static final ags<dqp<?, ?>> i = qf.a("disk_gravel");
-   public static final ags<dqp<?, ?>> j = qf.a("disk_sand");
-   public static final ags<dqp<?, ?>> k = qf.a("freeze_top_layer");
-   public static final ags<dqp<?, ?>> l = qf.a("disk_grass");
-   public static final ags<dqp<?, ?>> m = qf.a("bonus_chest");
-   public static final ags<dqp<?, ?>> n = qf.a("void_start_platform");
-   public static final ags<dqp<?, ?>> o = qf.a("desert_well");
-   public static final ags<dqp<?, ?>> p = qf.a("spring_lava_overworld");
-   public static final ags<dqp<?, ?>> q = qf.a("spring_lava_frozen");
-   public static final ags<dqp<?, ?>> r = qf.a("spring_water");
+   public static final ahc<dra<?, ?>> a = qh.a("end_spike");
+   public static final ahc<dra<?, ?>> b = qh.a("end_gateway_return");
+   public static final ahc<dra<?, ?>> c = qh.a("end_gateway_delayed");
+   public static final ahc<dra<?, ?>> d = qh.a("chorus_plant");
+   public static final ahc<dra<?, ?>> e = qh.a("end_island");
 
-   public static void a(pa<dqp<?, ?>> $$0) {
-      qf.a($$0, a, drc.s);
-      qf.a($$0, b, drc.G, new dtd(dvp.a(cwb.iC), dpf.c(List.of(cwb.j, cwb.i, cwb.l, cwb.k, cwb.fl, cwb.dP, cwb.dO)), biw.a(2, 3), 1));
-      qf.a($$0, c, drc.F, new dsz(cwb.cn.o()));
-      qf.a($$0, d, drc.E, new dsz(cwb.iC.o()));
-      qf.a($$0, e, drc.E, new dsz(cwb.mW.o()));
-      qf.a($$0, f, drc.D);
-      qf.a($$0, g, drc.H, new drr.a(dvh.a(cwb.H.o()), dvh.a(cwb.b.o())));
-      qf.a($$0, h, drc.G, new dtd(dvp.a(cwb.dR), dpf.c(List.of(cwb.j, cwb.dR)), biw.a(2, 3), 1));
-      qf.a($$0, i, drc.G, new dtd(dvp.a(cwb.L), dpf.c(List.of(cwb.j, cwb.i)), biw.a(2, 5), 2));
-      qf.a(
-         $$0, j, drc.G, new dtd(new dvp(dvh.a(cwb.I), List.of(new dvp.a(dpf.a(ia.a.q(), cwb.a), dvh.a(cwb.aV)))), dpf.c(List.of(cwb.j, cwb.i)), biw.a(2, 6), 2)
-      );
-      qf.a($$0, k, drc.u);
-      qf.a(
-         $$0,
-         l,
-         drc.G,
-         new dtd(
-            new dvp(dvh.a(cwb.j), List.of(new dvp.a(dpf.a(dpf.b(dpf.b(ia.b.q()), dpf.a(ia.b.q(), eea.c))), dvh.a(cwb.i)))),
-            dpf.c(List.of(cwb.j, cwb.sI)),
-            biw.a(2, 6),
-            2
-         )
-      );
-      qf.a($$0, m, drc.ac);
-      qf.a($$0, n, drc.n);
-      qf.a($$0, o, drc.o);
-      qf.a($$0, p, drc.k, new dub(eea.e.g(), true, 4, 1, ij.a(cvz::r, cwb.b, cwb.c, cwb.e, cwb.g, cwb.sJ, cwb.qz, cwb.qN, cwb.j)));
-      qf.a($$0, q, drc.k, new dub(eea.e.g(), true, 4, 1, ij.a(cvz::r, cwb.dP, cwb.qP, cwb.iC)));
-      qf.a($$0, r, drc.k, new dub(eea.c.g(), true, 4, 1, ij.a(cvz::r, cwb.b, cwb.c, cwb.e, cwb.g, cwb.sJ, cwb.qz, cwb.qN, cwb.j, cwb.dP, cwb.qP, cwb.iC)));
+   public static void a(pc<dra<?, ?>> $$0) {
+      qh.a($$0, a, drn.J, new dul(false, ImmutableList.of(), null));
+      qh.a($$0, b, drn.L, dtq.a(amz.a, true));
+      qh.a($$0, c, drn.L, dtq.a());
+      qh.a($$0, d, drn.l);
+      qh.a($$0, e, drn.K);
    }
 }
